@@ -42,7 +42,7 @@ $t->run(
       sub { ($err, $res) = @_[1, 2]; Mojo::IOLoop->stop }
     );
     Mojo::IOLoop->start;
-    is $err, 'Command missing arguments.', 'cmd /join convos';
+    is $err, 'Command missing arguments.', 'missing arguments';
   }
 );
 
@@ -54,8 +54,8 @@ $t->run(
       sub { ($err, $res) = @_[1, 2]; Mojo::IOLoop->stop }
     );
     Mojo::IOLoop->start;
-    is $err, '', 'cmd /join convos';
-    is $res->{topic}, 'some cool topic', 'res /join convos';
+    is $err, '', 'cmd /join #convos key';
+    is $res->{topic}, 'some cool topic', 'res /join #convos key';
   }
 );
 
@@ -217,7 +217,6 @@ $t->run(
   }
 );
 
-
 $t->run(
   [qr{JOIN \#devops}, ['main', 'join-redirect.irc']],
   sub {
@@ -226,11 +225,22 @@ $t->run(
       sub { ($err, $res) = @_[1, 2]; Mojo::IOLoop->stop }
     );
     Mojo::IOLoop->start;
-    is $err, '', 'cmd /join convos';
+    is $err, '', 'cmd /join #devops';
     ok !$connection->get_dialog('#devops'), 'not #devops';
     ok $connection->get_dialog('##devops'), 'but ##devops';
   }
 );
+
+ok !$connection->get_dialog('#q1'), 'convos not in dialog list';
+$connection->send('#whatever' => '/query #q1', sub { Mojo::IOLoop->stop });
+Mojo::IOLoop->start;
+ok $connection->get_dialog('#q1'), 'query #q1';
+is $connection->get_dialog('#q1')->frozen, 'Not active in this room.', 'not in the room';
+
+$connection->send('#whatever' => '/query query_man', sub { Mojo::IOLoop->stop });
+Mojo::IOLoop->start;
+ok $connection->get_dialog('query_man'), 'query query_man';
+is $connection->get_dialog('query_man')->frozen, '', 'query_man is not frozen';
 
 done_testing;
 
