@@ -4,6 +4,7 @@ Revision history for perl distribution Convos
  - Fix sending server messages to the right dialog
  - Fix joining a dialog by clicking on the dialog name
  - Fix first shown channel shows all users inactive #321
+ - Fix creating dialog on /QUERY
  - Add better handling of "create dialog" errors
  - Add functionality to only enrich visible links
  - Add better "rich link" caching
